--- a/wp-content/themes/aurum-child/custom-scss/style.scss
+++ b/wp-content/themes/aurum-child/custom-scss/style.scss
@@ -1,1 +1,579 @@
-aaaaaa
+/*
+***
+* MNSM DEPLOY RESTYLING
+***
+*  SCSS TABLE OF CONTENTS
+*   
+*  1.0 - Variables & Components
+*  2.0 - Reset
+*  3.0 - Fonts
+*  4.0 - Globals
+*  5.0 - Header
+*  6.0 - Footer
+*  7.0 - Menu Full Page
+*  -1.0 - Responsive
+*
+***
+*/
+
+
+/* ==========================================================================
+   1.0  Variables & Components
+   ========================================================================== */
+
+
+/* Colors palette */
+
+$color-magenta: #b91345;
+$color-orange-light: #ca6a00;
+$color-ocra: #e9ad00;
+$color-yellow: #d3c47a;
+$color-black: #000000;
+$color-white: #ffffff;
+$color-orange: #dc4627;
+$color-grey: #2b2b2b;
+$color-background: #161513;
+
+/* ==========================================================================
+		2.0 - Resets
+   ========================================================================== */
+
+.page-container {
+    margin: 0px auto;
+}
+
+html {
+    margin-top: 0 !important;
+}
+
+html,
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    margin: 0;
+}
+
+* {
+    &::before,
+    &::after {
+        display: none !important;
+        content: unset !important;
+    }
+    -webkit-touch-callout: none;
+    /*iOS Safari*/
+    -webkit-user-select: none;
+    /*
+      Safari,
+      Chrome,
+      Opera,
+      Samsung
+      */
+    -khtml-user-select: none;
+    /*
+      Konqueror
+      HTML
+      */
+    -moz-user-select: none;
+    /*
+      Firefox
+      */
+    -ms-user-select: none;
+    /*
+      Edge,
+      IE
+      */
+    user-select: none;
+    /*
+      Modern
+      browsers
+      */
+}
+
+*:focus,
+*:focus-visible,
+*:focus-within,
+.btn-close:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+    &>* {
+        width: unset;
+        max-width: unset;
+    }
+    .vc_col-sm {
+        &-1 {
+            width: 8.33333333%;
+        }
+        &-2 {
+            width: 16.66666667%;
+        }
+        &-3 {
+            width: 25%;
+        }
+        &-4 {
+            width: 33.33333333%;
+        }
+        &-5 {
+            width: 41.666666667%;
+        }
+        &-6 {
+            width: 50%;
+        }
+        &-7 {
+            width: 58.3333333334%;
+        }
+        &-8 {
+            width: 66.66666667%;
+        }
+        &-9 {
+            width: 74.999999999999%;
+        }
+        &-10 {
+            width: 83.3333333%;
+        }
+        &-11 {
+            width: 91.66666667%;
+        }
+        &-12 {
+            width: 100%;
+        }
+    }
+}
+
+.col-md {
+    &-1 {
+        width: 8.33333333%;
+    }
+    &-2 {
+        width: 16.66666667%;
+    }
+    &-3 {
+        width: 25%;
+    }
+    &-4 {
+        width: 33.33333333%;
+    }
+    &-5 {
+        width: 41.666666667%;
+    }
+    &-6 {
+        width: 50%;
+    }
+    &-7 {
+        width: 58.3333333334%;
+    }
+    &-8 {
+        width: 66.66666667%;
+    }
+    &-9 {
+        width: 74.999999999999%;
+    }
+    &-10 {
+        width: 83.3333333%;
+    }
+    &-11 {
+        width: 91.66666667%;
+    }
+    &-12 {
+        width: 100%;
+    }
+}
+
+.container {
+    width: 90% !important;
+    max-width: 90% !important;
+    margin: 0 auto;
+}
+
+
+/* ==========================================================================
+		3.0 - Fonts
+   ========================================================================== */
+
+$font-default: "montserrat";
+$font-default-italic: "montserrat_italic";
+@font-face {
+    font-family: montserrat;
+    src: url("../../../../mnsm_webfont/Montserrat-Variable.woff2") format("woff2"), url("../../../../mnsm_webfont/Montserrat-Variable.woff") format("woff");
+}
+
+@font-face {
+    font-family: montserrat_italic;
+    src: url("../../../../mnsm_webfont/Montserrat-Italic-Variable.woff2") format("woff2"), url("../../../../mnsm_webfont/Montserrat-Italic-Variable.woff") format("woff");
+}
+
+
+/* ==========================================================================
+		4.0 - Globals
+   ========================================================================== */
+
+body {
+    * {
+        font-family: $font-default;
+        margin-bottom: 0;
+    }
+    font-family: $font-default;
+    background-color: $color-background;
+    color: $color-white;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 149.1%;
+    a {
+        color: $color-white;
+        text-decoration: none;
+        &:hover {
+            color: unset;
+            text-decoration: none;
+        }
+    }
+    p {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 149.1%;
+    }
+    .vc_column-inner {
+        padding: 0;
+    }
+    h1 {
+        font-size: 75px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 98%;
+    }
+    h2 {
+        font-size: 45px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+}
+
+.wpb-content-wrapper {
+    position: relative;
+}
+
+.button-only-text {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    a {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+        &:hover {
+            .text {
+                text-decoration: unset;
+            }
+        }
+    }
+    .text {
+        color: $color-background;
+        font-size: 16px;
+        font-weight: 800;
+    }
+    &_black {
+        .text {
+            color: $color-background;
+        }
+    }
+    &_light {
+        .text {
+            font-weight: 600;
+        }
+    }
+    &_magenta {
+        svg,
+        svg * {
+            fill: $color-magenta;
+        }
+        .text {
+            color: $color-magenta;
+        }
+    }
+}
+
+.social-menu_widget {
+    ul {
+        list-style: none;
+        padding-left: 0;
+        display: flex;
+        gap: 16px;
+    }
+}
+
+
+/* ==========================================================================
+		5.0 - Header
+   ========================================================================== */
+
+header.site-header {
+    .site-header {
+        &_top-bar {
+            background-color: $color-background;
+            .container {
+                .row {
+                    padding: 16px 0;
+                    display: flex;
+                    justify-content: flex-end;
+                    position: relative;
+                    .text-centered {
+                        position: absolute;
+                        left: 50%;
+                        transform: translateX(-50%);
+                    }
+                }
+            }
+        }
+    }
+    .container {
+        .row {
+            .col-md-6 {
+                display: flex;
+                align-items: center;
+                gap: 64px;
+                justify-content: space-between;
+                .menu {
+                    &-left {
+                        .container-header-logo-secondary {
+                            display: flex;
+                            align-items: center;
+                            gap: 64px;
+                            img {
+                                max-width: 220px;
+                            }
+                            &.container-header-logo-secondary_second-logo {
+                                img {
+                                    filter: invert(1);
+                                }
+                            }
+                        }
+                    }
+                    &-right {
+                        height: 100%;
+                        /* background-color: red; */
+                        display: flex;
+                        align-items: center;
+                        gap: 64px;
+                        margin-left: 32px;
+                    }
+                }
+                .close-menu-full-page {
+                    display: none;
+                }
+            }
+        }
+    }
+    &.activeMenuFullPage {
+        background: transparent;
+        .site-header {
+            &_top-bar {
+                .container {
+                    opacity: 0;
+                }
+            }
+        }
+        .container {
+            .row {
+                .col-md-6 {
+                    .menu {
+                        &-left {
+                            .container-header-logo-secondary {
+                                img {
+                                    max-width: 220px;
+                                }
+                                &.container-header-logo-secondary_second-logo {
+                                    img {
+                                        filter: invert(0);
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .close-menu-full-page {
+                        display: block;
+                    }
+                    .active-menu-full-page {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* ==========================================================================
+		7.0 - Menu Full Page
+   ========================================================================== */
+
+body {
+    position: relative;
+    .menu-full-page-custom-mnsm {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        /*  opacity: 1;
+        z-index: 999; */
+        opacity: 0;
+        z-index: -1;
+        background: rgb(22, 21, 19);
+        background: linear-gradient(90deg, rgba(22, 21, 19, 1) 0%, rgba(22, 21, 19, 1) 50%, rgba(226, 224, 220, 1) 50%);
+        .container_custom-menu-full-page {
+            width: 100%;
+            height: 100%;
+            &.container_custom-menu-full-page_element-background {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                .strumento-musicale {
+                    img {
+                        position: absolute;
+                        bottom: 0;
+                        left: 50%;
+                        transform: translateX(-50%);
+                    }
+                }
+                .social-network {
+                    position: absolute;
+                    top: 75%;
+                    right: 10%;
+                    .social-menu_widget {
+                        ul {
+                            li {
+                                a {
+                                    svg {
+                                        stroke: $color-black;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .container-menu {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 220px;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: 1;
+                margin: 0 auto;
+                .main-menu {
+                    height: 100%;
+                    &>ul {
+                        height: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-start;
+                        li {
+                            position: unset;
+                            width: fit-content;
+                            &.menu-item {
+                                a {
+                                    color: $color-white;
+                                    font-size: 30px;
+                                    font-weight: 500;
+                                    line-height: 161.4%;
+                                    text-transform: uppercase;
+                                    &:hover {
+                                        color: $color-white;
+                                        text-decoration: unset;
+                                    }
+                                }
+                                &.current_page_item {
+                                    a {
+                                        color: $color-magenta;
+                                        font-weight: 900;
+                                    }
+                                }
+                                &-has-children {
+                                    &>ul.sub-menu {
+                                        position: absolute;
+                                        top: 0;
+                                        left: 60%;
+                                        display: none;
+                                        list-style: none;
+                                    }
+                                    &.activeVoiceMenu {
+                                        &>a {
+                                            color: $color-magenta;
+                                            font-weight: 900;
+                                        }
+                                        &>ul.sub-menu {
+                                            display: block;
+                                            li {
+                                                a {
+                                                    color: $color-background;
+                                                }
+                                                &.current-menu-item {
+                                                    a {
+                                                        color: $color-magenta;
+                                                        font-weight: 600;
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* ==========================================================================
+		-1 - Responsive
+   ========================================================================== */
+
+
+/* XXX-Large devices (large desktops, less than 1800px) */
+
+@media (max-width: 1799.98px) {}
+
+
+/* XX-Large devices (large desktops, less than 1600px) */
+
+@media (max-width: 1599.98px) {}
+
+
+/* X-Large devices (large desktops, less than 1400px) */
+
+@media (max-width: 1399.98px) {}
+
+
+/* Large devices (desktops, less than 1200px) */
+
+@media (max-width: 1199.98px) {}
+
+
+/* Medium devices (tablets, less than 992px) */
+
+@media (max-width: 991.98px) {}
+
+
+/* Small devices (landscape phones, less than 768px) */
+
+@media (max-width: 768.98px) {}
+
+
+/* Small applies to x-small devices (portrait phones, less than 576px) */
+
+@media (max-width: 575.98px) {}
+
+
+/* Small applies to x-small devices (portrait phones, less than 321px) */
+
+@media (max-width: 320.98px) {}
